added bulk banner delete
